--- a/api/composer.json
+++ b/api/composer.json
@@ -16,7 +16,7 @@
   "minimum-stability": "beta",
   "prefer-stable": true,
   "scripts": {
-    "post-update-cmd": [
+    "post-install-cmd": [
         "@propel:reverse",
         "@propel:build"
     ],
